Adding hidden and private tags for directory overview files in rst and idldoc format styles.

--- a/idldoc/src/templates/dir-listing.tt
+++ b/idldoc/src/templates/dir-listing.tt
@@ -31,7 +31,7 @@
       </ul>
       
       <ul>
-        [% FOREACH d IN dirs %][% SCOPE d %]
+        [% FOREACH d IN visible_dirs %][% SCOPE d %]
         <li><a href="[% url %]dir-files.html" target="files_frame">[% location %]</a></li>
         [% END %][% END %]
       </ul>
