--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -44,7 +44,7 @@
     	<h2 id="directories">Directories</h2>
     	
       <table class="attribute box small" summary="Directories">
-        [% FOREACH d IN dirs %][% SCOPE d %]
+        [% FOREACH d IN visible_dirs %][% SCOPE d %]
         <tr>
           <td class="name"><a href="[% url %]dir-overview.html">[% location %]</a></td>
           <td>[% overview_comments %]</td>
@@ -58,7 +58,7 @@
       <table class="attribute small" summary="Project statistics">
         <tr>
           <td class="name">Directories:</td>
-          <td>[% n_dirs %]</td>
+          <td>[% n_visible_dirs %]</td>
         </tr>
 
         <tr>
