Fixed up LaTeX template for new directory overview tags.

--- a/idldoc/src/templates/dir-overview.tt
+++ b/idldoc/src/templates/dir-overview.tt
@@ -73,7 +73,9 @@
   			 [% END %][% END %]
   		  </dl>
   		[% END %]
-
+      
+      <h2>Contents</h2>
+      
       [% IF n_dlm_files gt 0 %]
         <h3>.dlm files</h3>
         
