--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -29,6 +29,30 @@
 [% FOREACH d IN visible_dirs %][% SCOPE d %]
 \chapter{Directory: [% mg_escape_latex(fullname) %]}
 
+\section{Overview}
+
+[% IF has_overview_comments %]
+\noindent [% overview_comments %]
+[% END %]
+
+[% IF has_author_info %]
+\begin{description}
+[% IF has_author %]
+  \item[Author]\hspace*{1em} \newline [% author %]      
+[% END %]
+
+[% IF has_copyright %]
+  \item[Copyright]\hspace*{1em} \newline [% copyright %]      
+[% END %]
+    
+[% IF has_history %]
+  \item[History]\hspace*{1em} \newline [% history %]       
+[% END %]
+\end{description}
+[% END %]
+
+\vspace{2em}
+
 [% IF n_idldoc_files gt 0 %]
 [% FOREACH f IN idldoc_files %][% SCOPE f %]
 \input{[% output_path %]}
