Just need to finish DOCtreeRoutine::_computeComplexity to report McCabe complexity for each routine.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -330,7 +330,7 @@
 
 		          <tr>
 		            <td class="name">McCabe complexity:</td>
-		            <td></td>
+		            <td>[% complexity %]<div class="box [% complexity_color %]"/></td>
 		          </tr>   		            		                
 		        </table>
           [% END %]
