Fixing up the handling of comments for directories: comments found in the OVERVIEW file are preferentially used in the overview and comments found in an .idldoc file in the directory are preferentially used for the dir-overview file and index entry, but the either one will be used if the other is not present.

--- a/idldoc/src/templates/dir-overview.tt
+++ b/idldoc/src/templates/dir-overview.tt
@@ -36,9 +36,9 @@
   	<div class="content">
   		<h1>Directory: [% location %]</h1>
 
-      [% IF has_overview_comments %]
+      [% IF has_comments %]
       <div id="file_comments">
-      	<div class="small [% IF preformat %]pre[% END %]">[% overview_comments %]</div>
+      	<div class="small [% IF preformat %]pre[% END %]">[% comments %]</div>
       </div>
       [% END %]
 
