Modifying appearance of source code link for individual routines.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -206,7 +206,9 @@
         
         [% FOREACH r IN visible_routines %][% SCOPE r %]
         <div class="routine-details details" id="[% name %]">
-        	<h2 class="routine-name"><a href="#root" class="top">top</a>[% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %][% IF ~nosource %]<a href="[% source_url %]#[% name %]:source">source</a>[% END %]</span></h2>
+        	<h2 class="routine-name"><a href="#root" class="top">top</a>[% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]</span></h2>
+        	[% IF ~nosource %]<a href="[% source_url %]#[% name %]:source">source</a>[% END %]
+        	
         	[% IF has_categories %]
         	<p class="small categories">[% strjoin(categories, ', ') %]</p>
         	[% END %]
