Added author, copyright, history, and version tags for overview file in rst and IDLdoc formats.

--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -53,6 +53,33 @@
       </table>               
       [% END %]
       
+      [% IF has_author_info %]
+      <h2>Author information</h2>
+
+        <dl class="attribute small" summary="Library author information">
+          [% IF has_author %]
+            <dt>Author:</dt>
+            <dd>[% author %]</dd>       
+          [% END %]
+          
+          [% IF has_copyright %]
+            <dt>Copyright:</dt>
+            <dd>[% copyright %]</dd>       
+          [% END %]
+          
+          [% IF has_history %]
+            <dt>History:</dt>
+            <dd>[% history %]</dd>    
+          [% END %]
+
+          [% IF has_version %]
+            <dt>Version:</dt>
+            <dd>[% version %]</dd>     
+          [% END %]              
+        </dl>          
+      [% END %]
+                
+      
       <h2 id="statistics">Project statistics</h2>
 
       <table class="attribute small" summary="Project statistics">
