Adding message if there are not routines with complexity warnings.

--- a/src/templates/warnings.tt
+++ b/src/templates/warnings.tt
@@ -95,10 +95,12 @@
     		<h2>Routines with complexity warnings</h2>
     		
         <dl>
-        [% FOREACH r IN complex_routines %][% SCOPE r %]
-          <dt><a href="[% url %][% local_url %]">[% location %][% basename %]</a>: <a href="[% url %][% local_url %]#[% name %]">[% name %]</a></dt>
-          <dd><div class="box [% n_lines_color %]"></div> [% n_lines %] lines, <div class="box [% complexity_color %]"></div> [% complexity %] complexity</dd>        
-        [% END %][% END %]
+        [% IF n_complex_routines gt 0 %]
+          [% FOREACH r IN complex_routines %][% SCOPE r %]
+            <dt><a href="[% url %][% local_url %]">[% location %][% basename %]</a>: <a href="[% url %][% local_url %]#[% name %]">[% name %]</a></dt>
+            <dd><div class="box [% n_lines_color %]"></div> [% n_lines %] lines, <div class="box [% complexity_color %]"></div> [% complexity %] complexity</dd>        
+          [% END %][% END %]
+        [% ELSE %]No routines with warnings[% END %]
         </dl> 
     	</div>
     	[% END %]
