--- a/src/templates/idldocfile.tt
+++ b/src/templates/idldocfile.tt
@@ -39,7 +39,9 @@
       
       [% IF has_comments %]
       <div id="file_comments">
-        <p [% IF preformat %]class="pre"[% END %]>[% comments %]</p>
+        <div class="[% IF preformat %]pre[% END %]">
+          [% comments %]
+        </div>
       </div>
       [% END %]
           
