Removed filling of links for now and added title directive so that .idldoc files can provide a title to be displayed in file listings and as a title on their page.

--- a/src/templates/dir-overview.tt
+++ b/src/templates/dir-overview.tt
@@ -103,7 +103,7 @@
       
         <dl class="file_listing">
           [% FOREACH f IN idldoc_files %][% SCOPE f %]
-          <dt class="filename">[% basename %]</dt>
+          <dt class="filename">[% file_title %]</dt>
           <dd class="smaller"></dd>  
           [% END %][% END %]
         </dl>
