--- a/src/templates/file-listing.tt
+++ b/src/templates/file-listing.tt
@@ -57,7 +57,7 @@
     <h1>.idldoc files &nbsp;&nbsp; <span>[% n_idldoc_files %] files</span></h1>
       <ul>
         [% FOREACH f IN idldoc_files %]
-          <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
+          <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% file_title %]</a>[% END %]</li>
         [% END %]
       </ul>     
     [% END %]
