--- a/src/templates/index-entries.tt
+++ b/src/templates/index-entries.tt
@@ -42,8 +42,8 @@
     	<h3 id="[% letter %]">[% letter %]</h3>    	
     	  <dl class="index_listing">
     	  [% FOREACH item IN system->getIndexEntries(letter) %][% SCOPE item %]
-    	    <dt><a href="[% index_url %]">[% index_name %]</a> <span class="index_type">[% index_type %]</span><dt>
-    	    <dd class="small">[% IF has_comments %][% comments_first_line %][% END %]</dd>
+    	    <dt><a href="[% index_url %]">[% index_name %]</a> <span class="index_type smaller">[% index_type %]</span><dt>
+    	    <dd class="smaller">[% IF has_comments %][% comments_first_line %][% END %]</dd>
     	  [% END %][% END %]
     	  </dl>
     	[% END %]
