--- a/src/templates/overview.tt
+++ b/src/templates/overview.tt
@@ -48,7 +48,7 @@
         [% FOREACH d IN visible_dirs %][% SCOPE d %]
         <tr>
           <td class="name"><a href="[% url %]dir-overview.html">[% location %]</a></td>
-          <td>[% overview_comments %]</td>
+          <td>[% system_overview_comments %]</td>
         </tr>
         [% END %][% END %]
         [% END %]
