--- a/src/resources/main.css
+++ b/src/resources/main.css
@@ -1,7 +1,7 @@
 /* setup page */
 body { font-family: Helvetica, sans-serif; font-size: 12pt; margin: 0; padding: 0; }
 div.content { padding: 1em; }
-p { line-height: 1.2; }
+p { line-height: 1.4; }
 td p { padding-bottom: 0.5em; }
 img { border: 0; }
 
@@ -37,7 +37,8 @@ div.details dd { margin: 0.5em 2em 1em 4em; }
 a.top { 
 	font-family: Verdana, Helvetica, sans-serif; 
 	font-size: 8pt; 
-	font-weight: bold; 
+	font-weight: bold;
+	color: #5070ff; 
 	text-transform: uppercase; 
 	float: right; 
 	margin-left: 1em;
@@ -48,7 +49,7 @@ a.top {
 
 /* code styles */
 code { font-family: Monaco, "Courier New", Courier, monospace; }
-code.listing { white-space: pre; display: block; padding: 0.1em 3em 0.1em 1em; font-size: 90%; }
+code.listing { white-space: pre; display: block; margin: -0.75em 0 -0.75em 0; padding: 0 3em 0 1em; font-size: 90%; line-height: 1.4em; }
 code.source { white-space: pre; display: block; font-size: 90%; }
 code.source span.comments { color: #408080; }
 .syntax { margin-top: 1em; margin-left: 1.5em; text-indent: -1.5em; }
