--- a/src/templates/file-listing.tt
+++ b/src/templates/file-listing.tt
@@ -35,28 +35,28 @@
     	</ul>
     [% END %]
 
-    [% IF n_dlm_files gt 0 %]
-    <h1>.dlm files &nbsp;&nbsp; <span>[% n_dlm_files %] files</span></h1>
+    [% IF n_visible_dlm_files gt 0 %]
+    <h1>.dlm files &nbsp;&nbsp; <span>[% n_visible_dlm_files %] files</span></h1>
       <ul>
-        [% FOREACH f IN dlm_files %]
+        [% FOREACH f IN visible_dlm_files %]
           <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
         [% END %]
       </ul>    
     [% END %]
         
-    [% IF n_sav_files gt 0 %]
-    <h1>.sav files &nbsp;&nbsp; <span>[% n_sav_files %] files</span></h1>
+    [% IF n_visible_sav_files gt 0 %]
+    <h1>.sav files &nbsp;&nbsp; <span>[% n_visible_sav_files %] files</span></h1>
       <ul>
-        [% FOREACH f IN sav_files %]
+        [% FOREACH f IN visible_sav_files %]
           <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
         [% END %]
       </ul>    
     [% END %]
     
-    [% IF n_idldoc_files %]
-    <h1>.idldoc files &nbsp;&nbsp; <span>[% n_idldoc_files %] files</span></h1>
+    [% IF n_visible_idldoc_files %]
+    <h1>.idldoc files &nbsp;&nbsp; <span>[% n_visible_idldoc_files %] files</span></h1>
       <ul>
-        [% FOREACH f IN idldoc_files %]
+        [% FOREACH f IN visible_idldoc_files %]
           <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% file_title %]</a>[% END %]</li>
         [% END %]
       </ul>     
