--- a/src/resources/main.css
+++ b/src/resources/main.css
@@ -48,9 +48,9 @@ a.top {
 .pre { white-space: pre; }
 
 /* code styles */
-code { font-family: Monaco, "Courier New", Courier, monospace; }
-code.listing { white-space: pre; display: block; margin: 0.75em 0 0.75em 0; padding: 0 3em 0 1em; font-size: 90%; line-height: 1.4em; }
-code.source { white-space: pre; display: block; font-size: 90%; }
+code { font-family: Monaco, "Courier New", Courier, monospace; font-size: 95%; }
+code.listing { white-space: pre; display: block; margin: 0.75em 0 0.75em 0; padding: 0 3em 0 1em; line-height: 1.4em; }
+code.source { white-space: pre; display: block; }
 code.source span.comments { color: #408080; }
 .syntax { margin-top: 1em; margin-left: 1.5em; text-indent: -1.5em; }
 .var { font-style: italic; } 
