--- a/src/templates/help.tt
+++ b/src/templates/help.tt
@@ -158,6 +158,11 @@
   		    </tr>
 
   		    <tr>
+  		      <td class="name">USE_LATEX</td>
+  		      <td>set automatically typeset any LaTeX style equations in comments</td>
+  		    </tr>
+  		    
+  		    <tr>
   		      <td class="name">ERROR</td>
   		      <td>set to a named variable to return the error state of the IDLdoc call; 0 indicates no error, anything else is an error</td>
   		    </tr>
