Adding ability to show/hide prompts to overview/directory overview files.

--- a/src/templates/dir-overview.tt
+++ b/src/templates/dir-overview.tt
@@ -8,6 +8,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=[% charset %]"/>
     <title>Directory: [% location %] ([% title %])</title>
 
+    <script type="text/javascript" src="idldoc-resources/js/jquery.js"></script>
+    <script type="text/javascript" src="idldoc-resources/js/copybutton.js"></script>
+
     [% IF embed %]
     <style type="text/css" media="all">
          [% INCLUDE css_location %]
